# qsimbench-dataset

./: .gitattributes  .gitignore  README.md  pyproject.toml
dataset/: dj_10_aer_simulator_31.json  dj_10_fake_fez_32.json  dj_10_fake_kyiv_36.json  dj_10_fake_marrakesh_33.json  dj_10_fake_sherbrooke_34.json  dj_10_fake_torino_35.json  dj_11_aer_simulator_25.json  dj_11_fake_fez_26.json  dj_11_fake_kyiv_30.json  dj_11_fake_marrakesh_27.json  dj_11_fake_sherbrooke_28.json  dj_11_fake_torino_29.json  dj_12_aer_simulator_19.json  dj_12_fake_fez_20.json  dj_12_fake_kyiv_24.json  dj_12_fake_marrakesh_21.json  dj_12_fake_sherbrooke_22.json  dj_12_fake_torino_23.json  dj_13_aer_simulator_13.json  dj_13_fake_fez_14.json  dj_13_fake_kyiv_18.json  dj_13_fake_marrakesh_15.json  dj_13_fake_sherbrooke_16.json  dj_13_fake_torino_17.json  dj_14_aer_simulator_7.json  dj_14_fake_fez_8.json  dj_14_fake_kyiv_12.json  dj_14_fake_marrakesh_9.json  dj_14_fake_sherbrooke_10.json  dj_14_fake_torino_11.json  dj_15_aer_simulator_1.json  dj_15_fake_fez_2.json  dj_15_fake_kyiv_6.json  dj_15_fake_marrakesh_3.json  dj_15_fake_sherbrooke_4.json  dj_15_fake_torino_5.json  dj_4_aer_simulator_1.json  dj_4_aer_simulator_67.json  dj_4_fake_fez_68.json  dj_4_fake_kyiv_72.json  (+863 more)
dataset/2025-10-b/: dj_4_aer_simulator_6.json  dj_5_aer_simulator_5.json  dj_6_aer_simulator_4.json  ghz_4_aer_simulator_3.json  ghz_5_aer_simulator_2.json  (+5 more)
src/: config.yaml  create_dataset.py  custom_interface.py  docker-compose.yml  experiment.py  initialize.py  interface.py  new_dataset.py  remove_versions.py  theme.json
(+97153 files in other folders)
